<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BatTextActivity!</string>
    <string name="app_name">Battery Alert</string>
    <string name="main_service">Battery Alert Service</string>
    <string name="mesInfo">Soon to come, a list of selected alerts!</string>
    <string name="notif_ticker">Low battery text sent.</string>
    <string name="notif_contentTitle">Low Battery</string>
    <string name="notif_contentText">A text has been sent because your battery is low.</string>
    <string name="menu_settings">Settings</string>
    
    <!-- String for alert card inner text default  -->
    <string name="main_inner_default_text_1">Send a</string>
    <string name="main_inner_default_text_2">to</string>
    <string name="main_inner_default_text_3">at</string>
    
    <string name="inner_special_text_1">_____</string>
    <string name="inner_special_text_2">_____</string>
    <string name="inner_special_text_3">15%</string>
    <string name="alerttype_dialog_title">Select Alert Type</string>
    <string-array name="alerttype_options">
        <item>Text Message</item>
        <item>E-mail</item>
        <item>Other</item>
    </string-array>
    
    
</resources>